Actions
Bug #9392
closedidmap: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
idmap.c:1203:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (nm2unixname(nm, &unixname) < 0) { ^ idmap.c:1208:2: note: here case MAPPING_ID: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 96d32a53e61e5d703ab14d07d81e4e81c8c9fbb9
commit 96d32a53e61e5d703ab14d07d81e4e81c8c9fbb9 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9392 idmap: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions